--- a/package.json
+++ b/package.json
@@ -5,29 +5,34 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "node ./build/index.js",
-    "dev": "ts-node-dev ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev ./src/index.ts"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "api",
+    "apontamento",
+    "typescript",
+    "node.js"
+  ],
+  "author": "Alejandro",
   "license": "ISC",
-  "description": "",
+  "description": "API de apontamento",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "api-apontamento": "file:",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
 }
