--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-apontamento",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "node ./build/index.js",
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.4",
+    "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2"
   },
