--- a/src/vercel.json
+++ b/src/vercel.json
@@ -3,16 +3,13 @@
     "builds": [
       {
         "src": "src/index.ts",
-        "use": "@vercel/node",
-        "config": {
-          "distDir": "build"
-        }
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/build/index.js"
+        "src": "(.*)",
+        "dest": "src/index.ts"
       }
     ]
   }
