--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "build/index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start": "node ./build/index.js",
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "nodemon /src/index.ts"
   },
   "keywords": [
     "api",
