--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typescript",
     "node.js"
   ],
-  "author": "Alejandro",
+  "author": "AlejandroGomes",
   "license": "ISC",
   "description": "API de apontamento",
   "devDependencies": {
