--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "typescript",
     "node.js"
   ],
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "AlejandroGomes",
   "license": "ISC",
   "description": "API de apontamento",
@@ -38,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "pg": "^8.12.0",
+    "pre-commit": "^1.2.2",
     "sequelize": "^6.37.3"
   }
 }
