--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 PORT=5000
+POSTGRES_URL=postgres://default:8TM9CkqFOxNv@ep-round-fog-a4z1o5es-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
