--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.4",
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0",
@@ -42,6 +43,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
+    "nodemailer": "^6.10.0",
     "pg": "^8.12.0",
     "pre-commit": "^1.2.2",
     "sequelize": "^6.37.3"
